--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <input 
                         type="text" 
                         id="searchInput" 
-                        placeholder="Search for styles (e.g., casual, formal, vintage)..."
+                        placeholder="Search for styles ..."
                         class="w-full px-6 py-4 pl-14 text-lg border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-4 focus:ring-blue-200 focus:border-blue-400 transition duration-200 bg-white shadow-sm"
                     >
                     <div class="absolute left-5 top-1/2 transform -translate-y-1/2">
